feat(skills): author 23 skills — queue cleared (28 total)
Authored in 3 parallel batches after the initial 5 (jq/gh/fzf/just/xh):

Batch B (6) — high-leverage formatters/scanners/runtime:
  ruff, biome, gitleaks, watchexec, hyperfine, git-cliff

Batch C (8) — situational + tight short skills:
  direnv, mise, difftastic, bat, eza, sd, zoxide, lizard

Batch D (9) — JVM stack + niche cloud/lang tools:
  yq, ktlint, google-java-format, pmd, spotbugs, dart-toolchain,
  osv-scanner, flarectl, usql

Each follows the jq template: ≥7 patterns + ≥7 anti-patterns, ~20-entry
trigger eval (≥30% negatives, plain English with no tool name in prompts).
All 28 skills lint-clean (frontmatter shape + ≤1024-char descriptions).

Caveat: lint verifies shape, not content correctness. Trigger-rate eval
via scripts/eval-skill-claude.sh requires ANTHROPIC_API_KEY + Python 3.10+
and was not run in this session.

skills/SOURCES.md and HANDOVER.md updated to reflect shipped status.