@@ -36,20 +36,20 @@
 | `gh` | ✍️ shipped | [`skills/gh/SKILL.md`](gh/SKILL.md) + [`evals/gh.json`](../evals/gh.json) | Authored 2026-04-28. 8 patterns + 8 anti-patterns. 20-entry trigger eval (13/7 split). |
 | `mise` | ☑ | [ray-manaloto/claude-code-marketplace/mise-toolkit](https://github.com/ray-manaloto/claude-code-marketplace/tree/main/mise-toolkit) | Multi-SKILL toolkit. 1 star — usable but consider re-authoring for our pin. |
 | `jq` | ✍️ shipped | [`skills/jq/SKILL.md`](jq/SKILL.md) + [`evals/jq.json`](../evals/jq.json) | **#1 friction.** Authored 2026-04-27. 7 patterns + 7 anti-patterns covering extract / filter / reshape / aggregate / CSV / defaults / paths. 20-entry trigger eval set (12 trigger / 8 anti-trigger). |
-| `yq` | ✍️ | `skills/yq/SKILL.md` (to author) | YAML/TOML/XML round-trip; preserve comments; `eval-all` for multi-doc; differences from jq. |
+| `yq` | ✍️ shipped | [`skills/yq/SKILL.md`](yq/SKILL.md) + [`evals/yq.json`](../evals/yq.json) | Authored 2026-04-28. mikefarah-vs-kislyuk disambiguation, multi-doc, format conversion. 20-entry eval (12/8). |
 | `fzf` | ✍️ shipped | [`skills/fzf/SKILL.md`](fzf/SKILL.md) + [`evals/fzf.json`](../evals/fzf.json) | Authored 2026-04-28. Non-interactive `--filter` mode; 7 patterns + 7 anti-patterns. 20-entry eval (11/9). |
 | `xh` | ✍️ shipped | [`skills/xh/SKILL.md`](xh/SKILL.md) + [`evals/xh.json`](../evals/xh.json) | Authored 2026-04-28. Four operators, `--check-status`, sessions, auth, uploads. 20-entry eval (12/8). |
 | `just` | ✍️ shipped | [`skills/just/SKILL.md`](just/SKILL.md) + [`evals/just.json`](../evals/just.json) | Authored 2026-04-28. Discovery-first (`--list`, `--show`); 7 patterns + 7 anti-patterns. 20-entry eval (12/8). |
-| `bat` | ✍️ | `skills/bat/SKILL.md` (to author) | `--paging=never` for piping, `--language=` for stdin, `--diff`. |
-| `eza` | ✍️ | `skills/eza/SKILL.md` (to author) | `--git`, `--tree`, `--git-ignore`, `-l --no-quotes`. Short — keep tight. |
-| `sd` | ✍️ | `skills/sd/SKILL.md` (to author) | Pattern syntax differences from sed; capture groups; in-place vs stdout; multi-line. |
-| `zoxide` | ✍️ | `skills/zoxide/SKILL.md` (to author) | `z`, `zi`, db queries, init in non-interactive shells. Short. |
-| `direnv` | ✍️ | `skills/direnv/SKILL.md` (to author) | `.envrc` patterns, `direnv allow`, hooks, layout helpers, security model. |
-| `difftastic` | ✍️ | `skills/difftastic/SKILL.md` (to author) | `difft`, `--display side-by-side-show-both`, integration with `git config diff.external`. |
-| `git-cliff` | ✍️ | `skills/git-cliff/SKILL.md` (to author) | `cliff.toml`, conventional-commit parsing, custom commit-parsers, release workflow. |
-| `gitleaks` | ✍️ | `skills/gitleaks/SKILL.md` (to author) | `protect --staged` vs `detect`, `--no-banner --redact`, baseline files, custom rules. |
-| `hyperfine` | ✍️ | `skills/hyperfine/SKILL.md` (to author) | `--warmup`, `--prepare`, `--export-json`, parameter sweeps `-L`, regression detection. |
-| `watchexec` | ✍️ | `skills/watchexec/SKILL.md` (to author) | `-e ext`, `-c` clear, `-r` restart, `-w path`, integration with test runners. |
+| `bat` | ✍️ shipped | [`skills/bat/SKILL.md`](bat/SKILL.md) + [`evals/bat.json`](../evals/bat.json) | Authored 2026-04-28. Tight (~70 lines); `--paging=never` for pipes, stdin language hint, `batcat` Debian caveat. 18-entry eval (11/7). |
+| `eza` | ✍️ shipped | [`skills/eza/SKILL.md`](eza/SKILL.md) + [`evals/eza.json`](../evals/eza.json) | Authored 2026-04-28. Tight (~70 lines); `--git`, `--tree`, `--git-ignore`. 20-entry eval (11/9). |
+| `sd` | ✍️ shipped | [`skills/sd/SKILL.md`](sd/SKILL.md) + [`evals/sd.json`](../evals/sd.json) | Authored 2026-04-28. Tight (~68 lines); in-place by default, `$N` backrefs, `-A` across-newline, `-F` literal. 20-entry eval (12/8). |
+| `zoxide` | ✍️ shipped | [`skills/zoxide/SKILL.md`](zoxide/SKILL.md) + [`evals/zoxide.json`](../evals/zoxide.json) | Authored 2026-04-28. Tight (~72 lines); shell-function vs script-safe lookup, frecency, agent shell guardrail. 20-entry eval (11/9). |
+| `direnv` | ✍️ shipped | [`skills/direnv/SKILL.md`](direnv/SKILL.md) + [`evals/direnv.json`](../evals/direnv.json) | Authored 2026-04-28. `.envrc`, layout helpers, security allowlist, `direnv exec` for non-interactive shells. 19-entry eval (11/8). |
+| `difftastic` | ✍️ shipped | [`skills/difftastic/SKILL.md`](difftastic/SKILL.md) + [`evals/difftastic.json`](../evals/difftastic.json) | Authored 2026-04-28. Binary is `difft`; git-external one-shot, scoped config, language override. 20-entry eval (11/9). |
+| `git-cliff` | ✍️ shipped | [`skills/git-cliff/SKILL.md`](git-cliff/SKILL.md) + [`evals/git-cliff.json`](../evals/git-cliff.json) | Authored 2026-04-28. 6 patterns + 8 anti-patterns; release workflow + Tera templating. 20-entry eval (12/8). |
+| `gitleaks` | ✍️ shipped | [`skills/gitleaks/SKILL.md`](gitleaks/SKILL.md) + [`evals/gitleaks.json`](../evals/gitleaks.json) | Authored 2026-04-28. detect vs protect, baselines, custom rules. 20-entry eval (13/7). |
+| `hyperfine` | ✍️ shipped | [`skills/hyperfine/SKILL.md`](hyperfine/SKILL.md) + [`evals/hyperfine.json`](../evals/hyperfine.json) | Authored 2026-04-28. 7 patterns + 8 anti-patterns; warmup, sweeps, regression detection. 20-entry eval (12/8). |
+| `watchexec` | ✍️ shipped | [`skills/watchexec/SKILL.md`](watchexec/SKILL.md) + [`evals/watchexec.json`](../evals/watchexec.json) | Authored 2026-04-28. Encodes the agent-vs-human distinction (don't start in agent shells). 20-entry eval (11/9). |
 
 ---
 
@@ -60,7 +60,7 @@
 | `repomix` | ✅ | [yamadashy/repomix — repomix-explorer](https://github.com/yamadashy/repomix/tree/main/.claude/skills/repomix-explorer) | `npx repomix@latest` recipes. |
 | `graphify` | ✅ | [safishamsi/graphify — skill.md](https://github.com/safishamsi/graphify/blob/v5/graphify/skill.md) | Per-agent variants. Knowledge-graph extraction + BFS/DFS. |
 | `semgrep` | ✅ | [semgrep/skills](https://github.com/semgrep/skills) | Three SKILL.md: `semgrep`, `code-security`, `llm-security`. |
-| `lizard` | ✍️ | `skills/lizard/SKILL.md` (to author) | CCN thresholds, `-l <lang>`, `--xml`/`--csv`, function length warnings. |
+| `lizard` | ✍️ shipped | [`skills/lizard/SKILL.md`](lizard/SKILL.md) + [`evals/lizard.json`](../evals/lizard.json) | Authored 2026-04-28. 7 patterns + 7 anti-patterns; CCN, length, params, baseline diff. 20-entry eval (12/8). |
 
 ---
 
@@ -81,8 +81,8 @@
 | `gws` (Google Workspace) | ✅ | [googleworkspace/cli/skills](https://github.com/googleworkspace/cli/tree/main/skills) | ~100 SKILL.md (gmail, docs, calendar, slides, people, …). |
 | `wrangler` (Cloudflare) | ✅ | [cloudflare/skills/wrangler](https://github.com/cloudflare/skills/blob/main/skills/wrangler/SKILL.md) | Workers, KV, R2, D1, Queues, Workflows, Pipelines. |
 | `hcloud` (Hetzner) | ☑ | [danjdewhurst/hcloud-skills](https://github.com/danjdewhurst/hcloud-skills) | Servers, networks, DNS, storage + safety hooks. |
-| `flarectl` (Cloudflare DNS) | ✍️ | `skills/flarectl/SKILL.md` (to author) | DNS record CRUD, zone listing, when to use over wrangler. |
-| `usql` | ✍️ | `skills/usql/SKILL.md` (to author) | DSN format, `\c` connection switch, output formats, history file, transaction modes. |
+| `flarectl` (Cloudflare DNS) | ✍️ shipped | [`skills/flarectl/SKILL.md`](flarectl/SKILL.md) + [`evals/flarectl.json`](../evals/flarectl.json) | Authored 2026-04-28. Scoped-token auth, DNS CRUD, cache purge, flarectl-vs-wrangler boundary. 20-entry eval (12/8). |
+| `usql` | ✍️ shipped | [`skills/usql/SKILL.md`](usql/SKILL.md) + [`evals/usql.json`](../evals/usql.json) | Authored 2026-04-28. 30+ drivers, DSN format, `\c` switching, history, transactions. 20-entry eval (11/9). |
 
 ---
 
@@ -95,14 +95,14 @@
 | `golangci-lint` | ☑ | [samber/cc-skills-golang](https://github.com/samber/cc-skills-golang) | `.golangci.yml` source-of-truth. |
 | `php-cs-fixer` | ☑ | [DaveLiddament/php-claude-skills](https://github.com/DaveLiddament/php-claude-skills) | Dedicated coverage. |
 | `phpstan` | ☑ | [netresearch/php-modernization-skill](https://github.com/netresearch/php-modernization-skill) | Level 9+/10 modernization. |
-| `ruff` | ✍️ | `skills/ruff/SKILL.md` (to author) | `ruff check --fix --unsafe-fixes` vs `ruff format`; `--select`/`--ignore`; `pyproject.toml` config. |
-| `biome` | ✍️ | `skills/biome/SKILL.md` (to author) | `check` vs `format` vs `lint`; `--reporter=json`; migration from prettier+eslint. |
-| `ktlint` | ✍️ | `skills/ktlint/SKILL.md` (to author) | `--format`, `--reporter=json`, ruleset config. |
-| `google-java-format` | ✍️ | `skills/google-java-format/SKILL.md` (to author) | `--replace`, `--aosp`, integration with build tools. |
-| `pmd` | ✍️ | `skills/pmd/SKILL.md` (to author) | `check --format json`, ruleset selection, baselines. |
-| `spotbugs` | ✍️ | `skills/spotbugs/SKILL.md` (to author) | `-sarif`, effort levels, exclude filters. |
-| `dart-format` / `dart analyze` | ✍️ | `skills/dart-toolchain/SKILL.md` (to author) | Combined skill — both ship with Dart SDK. |
-| `osv-scanner` | ✍️ | `skills/osv-scanner/SKILL.md` (to author) | `--lockfile`, `--format=json`, recursive scan, ignore file. |
+| `ruff` | ✍️ shipped | [`skills/ruff/SKILL.md`](ruff/SKILL.md) + [`evals/ruff.json`](../evals/ruff.json) | Authored 2026-04-28. 7 patterns + 8 anti-patterns; covers both `check` and `format`. 20-entry eval (12/8). |
+| `biome` | ✍️ shipped | [`skills/biome/SKILL.md`](biome/SKILL.md) + [`evals/biome.json`](../evals/biome.json) | Authored 2026-04-28. 8 patterns + 8 anti-patterns; flags the `format`-without-`--write` no-mutation gotcha. 21-entry eval (13/8). |
+| `ktlint` | ✍️ shipped | [`skills/ktlint/SKILL.md`](ktlint/SKILL.md) + [`evals/ktlint.json`](../evals/ktlint.json) | Authored 2026-04-28. `-F` mutates, `--android`, `.editorconfig`, `@Suppress("ktlint:...")` migration. 20-entry eval (12/8). |
+| `google-java-format` | ✍️ shipped | [`skills/google-java-format/SKILL.md`](google-java-format/SKILL.md) + [`evals/google-java-format.json`](../evals/google-java-format.json) | Authored 2026-04-28. No-config philosophy, JDK 17+ `--add-exports`, dry-run CI gate. 20-entry eval (12/8). |
+| `pmd` | ✍️ shipped | [`skills/pmd/SKILL.md`](pmd/SKILL.md) + [`evals/pmd.json`](../evals/pmd.json) | Authored 2026-04-28. `pmd check` vs `pmd cpd`, ruleset categories, SARIF, baselines. 20-entry eval (11/9). |
+| `spotbugs` | ✍️ shipped | [`skills/spotbugs/SKILL.md`](spotbugs/SKILL.md) + [`evals/spotbugs.json`](../evals/spotbugs.json) | Authored 2026-04-28. Bytecode (not source); effort tiers, plugins, SARIF. 21-entry eval (12/9). |
+| `dart-format` / `dart analyze` | ✍️ shipped | [`skills/dart-toolchain/SKILL.md`](dart-toolchain/SKILL.md) + [`evals/dart-toolchain.json`](../evals/dart-toolchain.json) | Authored 2026-04-28. Combined: format + analyze + dart fix; CI gate via `--set-exit-if-changed`. 20-entry eval (12/8). |
+| `osv-scanner` | ✍️ shipped | [`skills/osv-scanner/SKILL.md`](osv-scanner/SKILL.md) + [`evals/osv-scanner.json`](../evals/osv-scanner.json) | Authored 2026-04-28. Multi-ecosystem CVE scan, SBOM input, `image` subcommand, ignoreUntil. 20-entry eval (12/8). |
 
 ---
 
@@ -115,15 +115,15 @@ Ordered by per-session friction (how often agents trip without the skill):
 3. `fzf` — ✅ shipped
 4. `just` — ✅ shipped
 5. `xh` — ✅ shipped
-6. `ruff` + `biome` — highest-velocity formatters of 2025-2026
-7. `gitleaks` — referenced from hooks recipe (5.5)
-8. `watchexec`, `hyperfine` — refactor-loop tools
-9. `direnv`, `mise` (re-author), `git-cliff`, `difftastic` — situational but recurring
-10. `bat`, `eza`, `sd`, `zoxide` — tight, < 50-line skills each
-11. `lizard` — referenced from rules
-12. JVM stack (ktlint / google-java-format / pmd / spotbugs) — language-conditional
-13. `osv-scanner`, `usql`, `flarectl`, `dart-toolchain` — niche
-14. Re-authored `mise` — only if upstream pin proves unstable
+6. `ruff` + `biome` — ✅ both shipped
+7. `gitleaks` — ✅ shipped
+8. `watchexec`, `hyperfine` — ✅ both shipped
+9. `direnv`, `mise`, `git-cliff`, `difftastic` — ✅ all shipped
+10. `bat`, `eza`, `sd`, `zoxide` — ✅ all shipped (tight, ~70-line skills)
+11. `lizard` — ✅ shipped
+12. JVM stack (ktlint / google-java-format / pmd / spotbugs) — ✅ all shipped
+13. `osv-scanner`, `usql`, `flarectl`, `dart-toolchain` — ✅ all shipped
+14. Re-authored `mise` — ✅ shipped
 
 ---
 
